Prueba Logo Header

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <nav>
-            <img src="../Images/Logos/LOGO_BlancoLetras.png" title="Logo Kyan" alt="Logo Kyan">
+            <img src="Images/Logos/LOGO_BlancoLetras.png" title="Logo Kyan" alt="Logo Kyan">
             <div class="navbar">
                 <ul class="nav-list">
                     <li><a href="/index.html">Inicio</a></li>
