--- a/paginas/plantillas/footer.html
+++ b/paginas/plantillas/footer.html
@@ -4,11 +4,25 @@
     </section>
     <section class="footer_mid">
         <p>
-            <a href="">Terminos y Condiciones</a>
+            <a href="">Términos y Condiciones</a>
+            <a href="">Política de Privacidad</a>
         </p>
     </section>
     <section class="footer_right">
-
+        <h2>Contacto</h2>
+        <p>📍 Rambla Marquesa de Castellbell, 30, 08980 Sant Feliu de Llobregat, Barcelona</p>
+        <p>📞 +34 936 63 66 75</p>
+        <div class="mapa-contenedor">
+            <iframe 
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2993.953629184635!2d2.0356299757595146!3d41.38423039615879!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a499c6c808e02f%3A0x249ac74b1b5b9c3!2sRambla%20Marquesa%20de%20Castellbell%2C%2030%2C%2008980%20Sant%20Feliu%20de%20Llobregat%2C%20Barcelona!5e0!3m2!1ses!2ses!4v1709497362983!5m2!1ses!2ses" 
+                width="100%" 
+                height="400" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy" 
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+        </div>
     </section>
 </footer>
     
