--- a/paginas/plantillas/footer.html
+++ b/paginas/plantillas/footer.html
@@ -1,28 +1,42 @@
 <footer>
     <section class="footer_left">
         <img src="/Images/Logos/LOGO_BlancoLetras.png" alt="Logo Kyan" title="Logo Kyan">
+        <p>En Kyan nos dedicamos a ofrecer soluciones innovadoras para tus necesidades digitales.</p>
+        <div class="redes-sociales">
+            <a href="" target="_blank" title="Instagram">
+                <img src="/Images/Logos/LogoInsta.png" alt="Instagram">
+            </a>
+            <a href="" target="_blank" title="TikTok">
+                <img src="/Images/Logos/LogoTikTok.png" alt="TikTok">
+            </a>
+        </div>
     </section>
     <section class="footer_mid">
-        <p>
-            <a href="">Términos y Condiciones</a>
-            <a href="">Política de Privacidad</a>
-        </p>
+        <h2>Contacto</h2>
+        <p>C/Passeig Sant Joan, 37, 08010 , Barcelona</p>
+        <p>+34 777 66 63 33</p>
+        <div class="mapa-contenedor">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5986.32029046742!2d2.1733840419137973!3d41.3923283750854!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4a2e489f966b7%3A0x493ac6f7f5875eaa!2sPg.%20de%20St.%20Joan%2C%2030%2C%20L&#39;Eixample%2C%2008010%20Barcelona!5e0!3m2!1ses!2ses!4v1747059395297!5m2!1ses!2ses" 
+            width="400" 
+            height="250" 
+            style="border:0;" 
+            allowfullscreen="" 
+            loading="lazy" 
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
     </section>
     <section class="footer_right">
-        <h2>Contacto</h2>
-        <p>📍 Rambla Marquesa de Castellbell, 30, 08980 Sant Feliu de Llobregat, Barcelona</p>
-        <p>📞 +34 936 63 66 75</p>
-        <div class="mapa-contenedor">
-            <iframe 
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2993.953629184635!2d2.0356299757595146!3d41.38423039615879!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a499c6c808e02f%3A0x249ac74b1b5b9c3!2sRambla%20Marquesa%20de%20Castellbell%2C%2030%2C%2008980%20Sant%20Feliu%20de%20Llobregat%2C%20Barcelona!5e0!3m2!1ses!2ses!4v1709497362983!5m2!1ses!2ses" 
-                width="100%" 
-                height="400" 
-                style="border:0;" 
-                allowfullscreen="" 
-                loading="lazy" 
-                referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
-        </div>
+        <a href="/faq">Preguntas Frecuentes</a>
+        <br>
+        <a href="/accesibilidad">Accesibilidad</a>
+        <br>
+        <a href="/politica-cookies">Política de Cookies</a>
+        <br>
+        <a href="/newsletter">Suscríbete a nuestro boletín</a>
+        <br>
+        <a href="">Términos y Condiciones</a>
+        <br>
+        <a href="">Política de Privacidad</a>
     </section>
 </footer>
     
