--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <ul class="nav-list">
                     <li><a href="/index.html">Inicio</a></li>
                     <li><a href="/paginas/nosotros.html">Nosotros</a></li>
-                    <li><a href="/paginas/cosplays.html">Cosplays</a></li>
+                    <li><a href="/paginas/cosplays.html">Cosplays</a></li> <!--Pelucas y accesorios en Desplegable-->
                     <li><a href="talleres.html">Talleres</a></li>
                     <li><a href="serviciospersonalizados.html">Servicios personalizados</a></li>
                     <li><a href="blog.html">Blog</a></li>
