--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 <ul class="nav-list">
                     <li><a href="/index.html">Inicio</a></li>
                     <li><a href="/paginas/nosotros.html">Nosotros</a></li>
-                    <li><a href="/paginas/cosplays.html">Cosplays</a></li> <!--Pelucas y accesorios en Desplegable-->
-                    <li><a href="talleres.html">Talleres</a></li>
+                    <li><a href="#cosplays">Cosplays</a></li> <!--Pelucas y accesorios en Desplegable-->
+                    <li><a href="#talleres">Talleres</a></li>
                     <li><a href="serviciospersonalizados.html">Servicios personalizados</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
@@ -59,29 +59,34 @@
             <a href="cosplays.html" class="btn">Ver Cosplays</a>
         </section>
 
-        <section class="cosplays">
+        <section id="cosplays" class="cosplays">
             <h2>Cosplays</h2>
             <div class="images_cosplays">
                 <div class="tarjetas" class="cosplayNaruto" >
                     <img src="Images/Cosplays/Cosplay_Naruto.jpg" alt="Cosplay de Naruto" title="Cosplay Naruto">
                     <p class="nombre">Cosplay de Naruto</p>
-                    <p class="precio">45,99€</p>
+                    <p class="precio">45,00€</p>
                 </div>
-                <div class="tarjetas" class="cosplayDabi" >
-                    <img src="Images/Cosplays/CosplayDabi.jpg" alt="Cosplay de Dabi" title="Cosplay Dabi">
-                    <p class="nombre">Cosplay de Dabi</p>
-                    <p class="precio">45,99€</p>
+                <div class="tarjetas" class="cosplayJoker" >
+                    <img src="Images/Cosplays/CosplayJoker.jpg" alt="Cosplay de Joker" title="Cosplay Joker">
+                    <p class="nombre">Cosplay del Joker</p>
+                    <p class="precio">59,99€</p>
                 </div>
                 <div class="tarjetas" class="cosplayJinx">
                     <img src="Images/Cosplays/CosplayJinx.jpg" alt="Cosplay de Jinx" title="Cosplay Jinx">
                     <p class="nombre">Cosplay de Jinx</p>
-                    <p class="precio">45,99€</p>
+                    <p class="precio">90€</p>
+                </div>
+                <div class="tarjetas" class="cosplayDabi" >
+                    <img src="Images/Cosplays/CosplayDabi.jpg" alt="Cosplay de Dabi" title="Cosplay Dabi">
+                    <p class="nombre">Cosplay de Dabi</p>
+                    <p class="precio">69,99€</p>
                 </div>
             </div>
             <a href="paginas/cosplays.html" class="btn">Ver más Cosplays</a>
         </section>
 
-        <section class="pelucas">
+        <section id="pelucas" class="pelucas">
             <h2>Pelucas</h2>
             <div class="images_pelucas">
                 <div class="tarjetas" class="pelucaAzul" >
@@ -96,23 +101,75 @@
                 </div>
                 <div class="tarjetas" class="columbina">
                     <img src="Images/Pelucas/peluca_columbina_genshin_impact.jpg" alt="Peluca de Columbina de Genshin Impact" title="Peluca de Columbina">
-                    <p class="nombre">Peluca de Columbina de Genshin Impact</p>
+                    <p class="nombrelargo">Peluca de Columbina de Genshin Impact</p>
                     <p class="precio">19,99€</p>
+                </div>
+                <div class="tarjetas" class="pelucaAzul" >
+                    <img src="Images/Pelucas/peluca_naranja_hinata_haikyuu.jpg" alt="Peluca de Hinata de Haikyuu" title="Peluca de Hinata">
+                    <p class="nombre">Peluca de Hinata de Haikyuu</p>
+                    <p class="precio">20,99€</p>
                 </div>
             </div>
             <a href="paginas/pelucas.html" class="btn">Ver más Pelucas</a>
         </section>
 
-        <section class="articulos">
-            <h2>Articulos</h2>
+        <section class="accesorios">
+            <h2>Accesorios</h2>
+            <div class="images_accesorios">
+                <div class="tarjetas" class="lentillasAzul" >
+                    <img src="Images/Accesorios/lentillas_azules.jpg" alt="Lentillas Azules" title="Lentillas Azules">
+                    <p class="nombre">Lentillas Azules</p>
+                    <p class="precio">20,00€</p>
+                </div>
+                <div class="tarjetas" class="orejaselfo" >
+                    <img src="Images/Accesorios/orejas_elfo_colores.jpg" alt="Orejas de Elfos de colores" title="Orejas Elfos">
+                    <p class="nombre">Orejas Elfo</p>
+                    <p class="precio">7,99€</p>
+                </div>
+                <div class="tarjetas" class="pestañas">
+                    <img src="Images/Accesorios/pestanyas.jpg" alt="Pestañas" title="Pestañas">
+                    <p class="nombre">Pestañas</p>
+                    <p class="precio">4,50€</p>
+                </div>
+                <div class="tarjetas" class="wigcap" >
+                    <img src="Images/Accesorios/wigcaps.jpg" alt="Wigcap" title="Wigcap">
+                    <p class="nombre">Wigcaps</p>
+                    <p class="precio">1,50€</p>
+                </div>
+            </div>
+            <a href="paginas/pelucas.html" class="btn">Ver más Pelucas</a>
         </section>
 
         <section class="talleres">
             <h2>Talleres</h2>
+                <div class="images_talleres">
+                <div class="tarjetas" class="tallerescosturas" >
+                    <img src="Images/Talleres/jovenes_talleres.jpg" alt="Taller de Costura" title="Taller de Costura">
+                    <p class="nombre">Taller de Costura</p>
+                    <p class="precio">7,00€</p>
+                </div>
+                <div class="tarjetas" class="tallermakeup" >
+                    <img src="Images/Talleres/taller_makeup.jpg" alt="Taller de Makeup" title="Taller de Makeup">
+                    <p class="nombre">Taller de Makeup</p>
+                    <p class="precio">7,00€</p>
+                </div>
+                <div class="tarjetas" class="tallerecostura">
+                    <img src="Images/Talleres/TallerCostura.jpg" alt="Taller de Costura" title="Taller de Costura">
+                    <p class="nombrelargo">Taller de Costura</p>
+                    <p class="precio">7,00€</p>
+                </div>
+                <div class="tarjetas" class="talleretelizacionpelucas" >
+                    <img src="Images/Talleres/taller_estilizacion.png" alt="Taller de Estilización de Pelucas" title="Taller de Estilización de Pelucas">
+                    <p class="nombre">Taller de Estilización de Pelucas</p>
+                    <p class="precio">7,00€</p>
+                </div>
+            </div>
+            <a href="paginas/pelucas.html" class="btn">Ver más Pelucas</a>
         </section>
 
         <section class="servicios_personalizados">
             <h2>Servicios Personalizados</h2>
+
         </section>
 
         <footer>
