Home Taller Acabado

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 </div>
                 <div class="tarjetas" class="tallerecostura">
                     <img src="Images/Talleres/TallerCostura.jpg" alt="Taller de Costura" title="Taller de Costura">
-                    <p class="nombrelargo">Taller de Costura</p>
+                    <p class="nombre">Taller de Costura</p>
                     <p class="precio">7,00€</p>
                 </div>
                 <div class="tarjetas" class="talleretelizacionpelucas" >
@@ -169,7 +169,8 @@
 
         <section class="servicios_personalizados">
             <h2>Servicios Personalizados</h2>
-
+            <p></p>
+            <a href="">Saber más</a>
         </section>
 
         <footer>
