--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <li><a href="/paginas/nosotros.html">Nosotros</a></li>
                     <li><a href="#cosplays">Cosplays</a></li> <!--Pelucas y accesorios en Desplegable-->
                     <li><a href="#talleres">Talleres</a></li>
-                    <li><a href="serviciospersonalizados.html">Servicios personalizados</a></li>
+                    <li><a href="/paginas/serviciopersonalizado.html">Servicios personalizados</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
                 </ul>
@@ -137,10 +137,10 @@
                     <p class="precio">1,50€</p>
                 </div>
             </div>
-            <a href="paginas/pelucas.html" class="btn">Ver más Pelucas</a>
+            <a href="paginas/accesorios.html" class="btn">Ver más Accesorios</a>
         </section>
 
-        <section class="talleres">
+        <section id="talleres" class="talleres">
             <h2>Talleres</h2>
                 <div class="images_talleres">
                 <div class="tarjetas" class="tallerescosturas" >
@@ -164,17 +164,57 @@
                     <p class="precio">7,00€</p>
                 </div>
             </div>
-            <a href="paginas/pelucas.html" class="btn">Ver más Pelucas</a>
+            <a href="paginas/talleres.html" class="btn">Ver los Talleres</a>
         </section>
 
         <section class="servicios_personalizados">
             <h2>Servicios Personalizados</h2>
-            <p></p>
-            <a href="">Saber más</a>
+            <p>Ofrecemos servicios personalizados para que te hagamos el cosplay que deseas, dandote la mejor calidad y aun mejor, te lo adaptamos a tus medidas.</p>
+            <a href="paginas/serviciopersonalizado.html">Infórmate</a>
         </section>
 
+
         <footer>
-            <div data-include="paginas/plantillas/footer.html"></div>
+            <section class="footer_left">
+        <img src="Images/Logos/LOGO_BlancoLetras.png" alt="Logo Kyan" title="Logo Kyan">
+        <p>En Kyan nos dedicamos a ofrecer cosplays de calidad a precios accesibles</p>
+        <div class="redes-sociales">
+            <a href="" target="_blank" title="Instagram">
+                <img src="Images/Logos/LogoInsta.png" alt="Instagram">
+            </a>
+            <a href="" target="_blank" title="TikTok">
+                <img src="Images/Logos/LogoTikTok.png" alt="TikTok">
+            </a>
+        </div>
+    </section>
+    <section class="footer_mid">
+        <h2>Contacto</h2>
+        <p><a href="mailto:kyan09012021@gmail.com">kyan09012021@gmail.com</a></p> 
+        <p>+34 <a href="tel:+34">777 66 63 33</a></p>
+        <p><a href="https://www.google.de/maps/dir//Pg.+de+St.+Joan,+30,+L'Eixample,+08010+Barcelona/@41.3931373,2.1759268,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x12a4a2e489f966b7:0x493ac6f7f5875eaa!2m2!1d2.1785017!2d41.3931373?entry=ttu&g_ep=EgoyMDI1MDUwNy4wIKXMDSoASAFQAw%3D%3D" target="_blank">C/Passeig Sant Joan, 37, 08010 , Barcelona</a></p>    
+        <div class="mapa-contenedor">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5986.32029046742!2d2.1733840419137973!3d41.3923283750854!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4a2e489f966b7%3A0x493ac6f7f5875eaa!2sPg.%20de%20St.%20Joan%2C%2030%2C%20L&#39;Eixample%2C%2008010%20Barcelona!5e0!3m2!1ses!2ses!4v1747059395297!5m2!1ses!2ses" 
+            width="400" 
+            height="250" 
+            style="border:0;" 
+            allowfullscreen="" 
+            loading="lazy" 
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </section>
+    <section class="footer_right">
+        <a href="/paginas/legal/faq.html">Preguntas Frecuentes</a>
+        <br>
+        <a href="/paginas/legal/accesibilidad.html">Accesibilidad</a>
+        <br>
+        <a href="/paginas/legal/politica-cookies.html">Política de Cookies</a>
+        <br>
+        <a href="/paginas/legal/newsletter.html">Suscríbete a nuestro boletín</a>
+        <br>
+        <a href="/paginas/legal/terminos-condiciones.html">Términos y Condiciones</a>
+        <br>
+        <a href="/paginas/legal/politica-privacidad.html">Política de Privacidad</a>
+    </section>
         </footer>
         <script src="script.js"></script>
         <script src="scripts/include.js"></script>
