--- a/paginas/plantillas/footer.html
+++ b/paginas/plantillas/footer.html
@@ -1,7 +1,7 @@
 <footer>
     <section class="footer_left">
         <img src="/Images/Logos/LOGO_BlancoLetras.png" alt="Logo Kyan" title="Logo Kyan">
-        <p>En Kyan nos dedicamos a ofrecer soluciones innovadoras para tus necesidades digitales.</p>
+        <p>En Kyan nos dedicamos a ofrecer cosplays de calidad a precios accesibles</p>
         <div class="redes-sociales">
             <a href="" target="_blank" title="Instagram">
                 <img src="/Images/Logos/LogoInsta.png" alt="Instagram">
@@ -13,8 +13,9 @@
     </section>
     <section class="footer_mid">
         <h2>Contacto</h2>
-        <p>C/Passeig Sant Joan, 37, 08010 , Barcelona</p>
-        <p>+34 777 66 63 33</p>
+        <p><a href="mailto:kyan09012021@gmail.com">kyan09012021@gmail.com</a></p> 
+        <p>+34 <a href="tel:+34">777 66 63 33</a></p>
+        <p><a href="https://www.google.de/maps/dir//Pg.+de+St.+Joan,+30,+L'Eixample,+08010+Barcelona/@41.3931373,2.1759268,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x12a4a2e489f966b7:0x493ac6f7f5875eaa!2m2!1d2.1785017!2d41.3931373?entry=ttu&g_ep=EgoyMDI1MDUwNy4wIKXMDSoASAFQAw%3D%3D" target="_blank">C/Passeig Sant Joan, 37, 08010 , Barcelona</a></p>    
         <div class="mapa-contenedor">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5986.32029046742!2d2.1733840419137973!3d41.3923283750854!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4a2e489f966b7%3A0x493ac6f7f5875eaa!2sPg.%20de%20St.%20Joan%2C%2030%2C%20L&#39;Eixample%2C%2008010%20Barcelona!5e0!3m2!1ses!2ses!4v1747059395297!5m2!1ses!2ses" 
             width="400" 
@@ -26,17 +27,17 @@
         </div>
     </section>
     <section class="footer_right">
-        <a href="/faq">Preguntas Frecuentes</a>
+        <a href="/paginas/legal/faq.html">Preguntas Frecuentes</a>
         <br>
-        <a href="/accesibilidad">Accesibilidad</a>
+        <a href="/paginas/legal/accesibilidad.html">Accesibilidad</a>
         <br>
-        <a href="/politica-cookies">Política de Cookies</a>
+        <a href="/paginas/legal/politica-cookies.html">Política de Cookies</a>
         <br>
-        <a href="/newsletter">Suscríbete a nuestro boletín</a>
+        <a href="/paginas/legal/newsletter.html">Suscríbete a nuestro boletín</a>
         <br>
-        <a href="">Términos y Condiciones</a>
+        <a href="/paginas/legal/terminos-condiciones.html">Términos y Condiciones</a>
         <br>
-        <a href="">Política de Privacidad</a>
+        <a href="/paginas/legal/politica-privacidad.html">Política de Privacidad</a>
     </section>
 </footer>
     
