--- a/index.html
+++ b/index.html
@@ -170,20 +170,20 @@
         <section class="servicios_personalizados">
             <h2>Servicios Personalizados</h2>
             <p>Ofrecemos servicios personalizados para que te hagamos el cosplay que deseas, dandote la mejor calidad y aun mejor, te lo adaptamos a tus medidas.</p>
-            <a href="paginas/serviciopersonalizado.html">Infórmate</a>
+            <button><a href="paginas/serviciopersonalizado.html">Infórmate</a></button>
         </section>
 
 
         <footer>
-            <section class="footer_left">
-        <img src="Images/Logos/LOGO_BlancoLetras.png" alt="Logo Kyan" title="Logo Kyan">
+               <section class="footer_left">
+        <img src="/Images/Logos/LOGO_BlancoLetras.png" alt="Logo Kyan" title="Logo Kyan">
         <p>En Kyan nos dedicamos a ofrecer cosplays de calidad a precios accesibles</p>
         <div class="redes-sociales">
             <a href="" target="_blank" title="Instagram">
-                <img src="Images/Logos/LogoInsta.png" alt="Instagram">
+                <img src="/Images/Logos/LogoInsta.png" alt="Instagram">
             </a>
             <a href="" target="_blank" title="TikTok">
-                <img src="Images/Logos/LogoTikTok.png" alt="TikTok">
+                <img src="/Images/Logos/LogoTikTok.png" alt="TikTok">
             </a>
         </div>
     </section>
@@ -203,17 +203,20 @@
         </div>
     </section>
     <section class="footer_right">
-        <a href="/paginas/legal/faq.html">Preguntas Frecuentes</a>
-        <br>
-        <a href="/paginas/legal/accesibilidad.html">Accesibilidad</a>
-        <br>
-        <a href="/paginas/legal/politica-cookies.html">Política de Cookies</a>
-        <br>
-        <a href="/paginas/legal/newsletter.html">Suscríbete a nuestro boletín</a>
-        <br>
-        <a href="/paginas/legal/terminos-condiciones.html">Términos y Condiciones</a>
-        <br>
-        <a href="/paginas/legal/politica-privacidad.html">Política de Privacidad</a>
+        <div class="nosotros_footer">
+            <a href="/paginas/legal/faq.html">Preguntas Frecuentes</a>
+            <br>
+            <a href="/paginas/legal/accesibilidad.html">Accesibilidad</a>
+            <br>
+            <a href="/paginas/legal/newsletter.html">Suscríbete a nuestro boletín</a>
+        </div>
+        <div class="legal">
+            <a href="/paginas/legal/politica-cookies.html">Política de Cookies</a>
+            <br>
+            <a href="/paginas/legal/terminos-condiciones.html">Términos y Condiciones</a>
+            <br>
+            <a href="/paginas/legal/politica-privacidad.html">Política de Privacidad</a>
+        </div>
     </section>
         </footer>
         <script src="script.js"></script>
