--- a/paginas/plantillas/footer.html
+++ b/paginas/plantillas/footer.html
@@ -27,17 +27,20 @@
         </div>
     </section>
     <section class="footer_right">
-        <a href="/paginas/legal/faq.html">Preguntas Frecuentes</a>
-        <br>
-        <a href="/paginas/legal/accesibilidad.html">Accesibilidad</a>
-        <br>
-        <a href="/paginas/legal/politica-cookies.html">Política de Cookies</a>
-        <br>
-        <a href="/paginas/legal/newsletter.html">Suscríbete a nuestro boletín</a>
-        <br>
-        <a href="/paginas/legal/terminos-condiciones.html">Términos y Condiciones</a>
-        <br>
-        <a href="/paginas/legal/politica-privacidad.html">Política de Privacidad</a>
+        <div class="nosotros_footer">
+            <a href="/paginas/legal/faq.html">Preguntas Frecuentes</a>
+            <br>
+            <a href="/paginas/legal/accesibilidad.html">Accesibilidad</a>
+            <br>
+            <a href="/paginas/legal/newsletter.html">Suscríbete a nuestro boletín</a>
+        </div>
+        <div class="legal">
+            <a href="/paginas/legal/politica-cookies.html">Política de Cookies</a>
+            <br>
+            <a href="/paginas/legal/terminos-condiciones.html">Términos y Condiciones</a>
+            <br>
+            <a href="/paginas/legal/politica-privacidad.html">Política de Privacidad</a>
+        </div>
     </section>
 </footer>
     
