--- a/paginas/plantillas/footer.html
+++ b/paginas/plantillas/footer.html
@@ -28,6 +28,7 @@
     </section>
     <section class="footer_right">
         <div class="nosotros_footer">
+            <h3>Nosotros</h3>
             <a href="/paginas/legal/faq.html">Preguntas Frecuentes</a>
             <br>
             <a href="/paginas/legal/accesibilidad.html">Accesibilidad</a>
@@ -35,6 +36,7 @@
             <a href="/paginas/legal/newsletter.html">Suscríbete a nuestro boletín</a>
         </div>
         <div class="legal">
+            <h3>Terminos Legales</h3>
             <a href="/paginas/legal/politica-cookies.html">Política de Cookies</a>
             <br>
             <a href="/paginas/legal/terminos-condiciones.html">Términos y Condiciones</a>
