Añadido meta name y canonical

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kyan Cosplay | Tu tienda de cosplay de Barcelona</title>
+    <title>Kyan Cosplay | Tu tienda de cosplay en Barcelona</title>
     <meta name="description" content="Kyan Cosplay, tienda de Cosplay mas cercana en Barcelona, vendemos de 
     trajes, a pelucas, acesorios y hasta talleres interactivos para que aprendas a hacer tu propio traje.">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://kyancosplay.github.io/KyanCosplay/">
     <link rel="icon" href="Images/Logos/K_Logo.ico" type="image/png">
     <link rel="stylesheet" href="styles.css">
 </head>
