Añadir Logos footer

--- a/index.html
+++ b/index.html
@@ -249,14 +249,14 @@
 
         <footer>
             <section class="footer_left">
-                <img src="/Images/Logos/LOGO_BlancoLetras.png" alt="Logo Kyan" title="Logo Kyan"  loading="lazy">
+                <img src="Images/Logos/LOGO_BlancoLetras.png" alt="Logo Kyan" title="Logo Kyan"  loading="lazy">
                 <p>En Kyan nos dedicamos a ofrecer cosplays de calidad a precios accesibles</p>
                 <div class="redes-sociales">
                     <a href="" target="_blank" title="Instagram">
-                        <img src="/Images/Logos/LogoInsta.png" alt="Instagram"  loading="lazy">
+                        <img src="Images/Logos/LogoInsta.png" alt="Instagram"  loading="lazy">
                     </a>
                     <a href="" target="_blank" title="TikTok">
-                        <img src="/Images/Logos/LogoTikTok.png" alt="TikTok"  loading="lazy">
+                        <img src="Images/Logos/LogoTikTok.png" alt="TikTok"  loading="lazy">
                     </a>
                 </div>
             </section>
